fix alignment for onboarding step count, ref: #2619166663499

--- a/stylus/_layout.styl
+++ b/stylus/_layout.styl
@@ -30,11 +30,11 @@ active-tab-border-width = 6px
 
 
 #step-count
+  position: absolute
   text-align: center
   width 200px
   left: 50%
   margin-left -100px
-  position: absolute
   bottom: 11em
 
 [class*='choice-']
@@ -70,6 +70,10 @@ active-tab-border-width = 6px
   height 100%
 
 .onboarding
+  .choices
+    bottom: 60px
+  #step-count
+    bottom 1em
   .heading-page
     top: -10em
 
